# csl_detection

./: CMakeLists.txt  CMakeLists.txt~  README.md  coke_csl.ply  package.xml
config/: AdaptiveOMPLTracker.yaml  camera_calibration.yaml
data/: coke_csl.blend  coke_csl.blend1  coke_csl.pcd
data/kinect2_calibration_files/csl_kinect2/: calib_color.yaml  calib_color2.yaml  calib_ir.yaml
data/objects/: ScreenClene.pcd  ScreenClene.ply  box.pcd  box.ply  water_bottle.pcd  water_bottle.ply
include/csl_detection/: k2g.h  math_utils.hpp
launch/: kinect2_new.launch  kinect2_tracker.launch  kinect2ork.launch
src/: #kinect2_freenect_tracker.cpp#  backup_kinect2_csl_tracker.cpp~  bakup_kinect2_csl_tracker.cpp  csl_detection_node.cpp  csl_detection_node.cpp.bak  csl_detection_node.cpp~  csl_new_kinect2_tracker.cpp  csl_tracker.cpp  csl_tracker.cpp~  dian_kinect2_tracker.cpp  kinect2_csl_tracker.bak  kinect2_csl_tracker.bak~  kinect2_csl_tracker.cpp  kinect2_csl_tracker.cpp~  kinect2_freenect_tracker.cpp  kinect2_freenect_tracker.cpp~  kinect2_read_write_node.cpp  kinect2_read_write_node.cpp~  kinect2_tracking_node.cpp  kinect2_tracking_node.cpp~  kinect_tracking_node.cpp~  openni2_test.cpp  openni2_test.cpp~  pcd_cloud_viewer.cpp
src/csl_detection/: math_utils.cpp
src/tools/: pointcloud2_to_pcd.cpp
